[package]
name = "adventofcode2015"
version = "0.1.0"
authors = ["coder"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.7.1"
itertools = "0.9.0"
md5 = "0.7.0"
parse-display = "0.5.3"
regex = "1.4.2"
simple-error = "0.2.3"
